# iron-council

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEX_41_1_CLIENT_FINISH.md  CODEX_41_1_PROMPT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  compose.support-services.yaml  core-architecture.md  core-plan.md  env.local.example  env.runtime.example  pyproject.toml
.github/workflows/: quality.yml
_bmad-output/implementation-artifacts/: 1-1-scaffold-fastapi-server-and-core-domain-contracts.md  1-2-add-shared-domain-enums-and-validation-primitives.md  10-1-project-fog-filtered-agent-state-from-canonical-match-data.md  10-2-expose-in-memory-agent-match-listing-state-polling-and-order-submission-endpoints.md  11-1-run-a-multi-agent-quality-review-and-simplification-sweep-across-the-game-server.md  11-2-add-realistic-scenario-based-smoke-tests-for-deterministic-gameplay-flows.md  11-3-add-a-large-batch-simulation-regression-harness-with-invariant-checks.md  11-4-add-critical-api-end-to-end-tests-for-agent-gameplay-journeys.md  12-1-add-a-local-support-services-stack-for-database-backed-development-and-validation.md  12-2-introduce-a-proper-database-migration-service-and-migration-driven-schema-lifecycle.md  12-3-add-deterministic-seed-reset-tooling-and-per-worktree-isolated-test-databases.md  12-4-wire-real-api-integration-tests-and-small-end-to-end-smoke-flows-into-the-quality-workflow.md  13-1-add-agent-facing-match-message-inbox-and-send-endpoints.md  (+124 more)
agent-sdk/: README.md
alembic/: env.py
client/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
docs/: index.md
scripts/: runtime-control.sh
server/: __init__.py  agent_registry.py  agent_registry_access.py  agent_registry_commands.py  agent_registry_diplomacy.py  agent_registry_messaging.py  agent_registry_types.py  auth.py  fog.py  main.py  match_initialization.py  order_validation.py  registry_seed_data.py  resolver.py  runtime.py  runtime_observability.py  settings.py  simulation.py  simulation_regression.py  websocket.py
tests/: conftest.py  support.py  test_agent_registry.py  test_auth.py  test_client_dev_smoke.py  test_database_migrations.py  test_db_registry.py  test_db_tooling.py  test_fog.py  test_local_dev_docs.py  test_main.py  test_map_data.py  test_match_initialization.py  test_order_validation.py  test_orders.py  test_resolver.py  test_runtime_contract_docs.py  test_settings.py  test_simulation.py  test_simulation_regression.py  test_simulation_smoke.py  test_state.py
(+290 files in other folders)
