[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iron-counsil-server"
version = "0.1.0"
description = "FastAPI service scaffold for iron-counsil."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2.0",
  "fastapi>=0.116,<1.0",
  "sqlalchemy>=2.0.43,<3.0",
  "uvicorn[standard]>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "mypy>=1.17,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "pre-commit>=4.2,<5.0",
  "pytest>=8.4,<9.0",
  "pytest-asyncio>=1.1,<2.0",
  "pytest-cov>=6.2,<7.0",
  "ruff>=0.12,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.pytest.ini_options]
addopts = [
  "-q",
  "--strict-config",
  "--strict-markers",
  "--cov=server",
  "--cov=agent-sdk/python",
  "--cov-report=term-missing:skip-covered",
]
asyncio_mode = "auto"
testpaths = ["tests"]
xfail_strict = true

[tool.coverage.run]
branch = true
omit = ["server/models/*"]
source = ["server", "agent-sdk/python"]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["server", "tests", "agent-sdk/python"]
extend-exclude = [".agents", "_bmad", "_bmad-output"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["server", "tests", "agent-sdk/python"]
exclude = "(^\\.agents/|^_bmad/|^_bmad-output/)"
pretty = true
show_error_codes = true
warn_unreachable = true
